--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/style.css"></link>
+<link rel="stylesheet" href="./style.css"></link>
     <title>Happy Birthday</title>
 </head>
 <body>
@@ -16,8 +16,8 @@
             <button class="btn">Click Me</button>        
           </div>
           <div class="banner-fig flex-2">
-            <img id="birthdayImage" src="/assets/284c709e-e196-4afa-a5c7-0ea6ce907d62.jpg" alt="" />
+            <img id="birthdayImage" src="./assets/284c709e-e196-4afa-a5c7-0ea6ce907d62.jpg" alt="" />
     </div></div>
-    <script src="/main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
